add new 3 pages for difrent page

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello</h2>
+    <div class="M-ui">
+        <form class="ui">
+            <h2>Hello there!<br /><span>Welcome to Chat app</span></h2>
+            <input type="text" class="username-input" placeholder="Enter your username here">
+            <button class="create-room">Create new room</button>
+            <p class="join-existing-room">or join an existing room:</p>
+
+        </form>
+    </div>
 </body>
 </html>
