--- a/public/createrom.html
+++ b/public/createrom.html
@@ -9,6 +9,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>dsadwa</h2>
+    <form class="ui">
+        <div>
+            <h1>Create a chat room</h1>
+            <input type="text" class="username"placeholder="username" >
+            <input type="text" class="room-name"placeholder="room name" >
+            <button class="chat-room-public">chat room public</button>
+            <button class="chat-room-private">chat room private</button>
+            <button class="home">Stare page</button>
+            
+        </div>
+    </form>
+    
 </body>
 </html>
