--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,16 @@
         <form class="ui">
             <h2>Hello there!<br /><span>Welcome to Chat app</span></h2>
             <input type="text" class="username-input" placeholder="Enter your username here">
-            <button class="create-room">Create new room</button>
+            <button class="create-room"> <a href="createrom.html">Create new room</a></button>
             <p class="join-existing-room">or join an existing room:</p>
-
+        </form>
+        <form>
+            <div class="room-join">
+                <table>
+                </table>
+                <table>
+                </table>
+            </div>
         </form>
     </div>
 </body>
