done with html now starting on css

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@
         </form>
         <form>
             <div class="room-join">
-                <table>
+                <table id="public">
+                    
                 </table>
-                <table>
+                <table id="private">
                 </table>
             </div>
         </form>
