--- a/public/chatprivate.html
+++ b/public/chatprivate.html
@@ -9,6 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>sdwd2</h2>
+    <div>
+        <ul id="message-here">
+
+        </ul>
+        <form class="message-form">
+            <input placeholder="type your message here" class="message-input" type="text" name="" id="">
+            <button type="button" class="message-button"></button>
+        </form>
+    </div>
 </body>
 </html>
