--- a/public/createrom.html
+++ b/public/createrom.html
@@ -14,9 +14,9 @@
             <h1>Create a chat room</h1>
             <input type="text" class="username"placeholder="username" >
             <input type="text" class="room-name"placeholder="room name" >
-            <button class="chat-room-public">chat room public</button>
-            <button class="chat-room-private">chat room private</button>
-            <button class="home">Stare page</button>
+            <button type="button" class="chat-room-public">chat room public</button>
+            <button type="button" class="chat-room-private">chat room private</button>
+            <button type="button" class="home">Stare page</button>
             
         </div>
     </form>
