--- a/public/chatRoom.html
+++ b/public/chatRoom.html
@@ -14,8 +14,8 @@
 
         </ul>
         <form class="message-form">
-            <input placeholder="type your message here" class="message-input" type="text" name="" id="">
-            <button type="button" class="message-button"></button>
+            <input name="messageInput" id="" cols="30" rows="10"></input>
+            <button type="submit" class="message-button">Send</button>
         </form>
     </div>
 </body>
