--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" defer src="script.js"></script>
     <title>Document</title>
@@ -24,6 +25,19 @@
                 <table id="private">
                 </table>
             </div>
+        </form>
+    </div>
+
+
+
+
+    <div>
+        <ul id="message-here">
+
+        </ul>
+        <form class="message-form">
+            <input name="messageInput" id="messageInput" cols="30" rows="10"></input>
+            <button type="submit" id="message-button" class="message-button">Send</button>
         </form>
     </div>
 </body>
