--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="M-ui">
+    <div id="frontPage" class="M-ui">
         <form class="ui">
             <h2>Hello there!<br /><span>Welcome to Chat app</span></h2>
             <input type="text" class="username-input" placeholder="Enter your username here">
@@ -28,10 +28,12 @@
         </form>
     </div>
 
+    <button id="showButton">Show it</button>
 
 
 
-    <div>
+
+    <div id="chatPage" >
         <ul id="message-here">
 
         </ul>
