--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             </div>
         </form>
 
-        <div class="message-div">
+        <div class="message-div chat">
             <ul id="message-here">
                 <h1>sadad</h1>
             </ul>
