--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
             </div>
         </form>
     </div>
-
+    <div id="create-rooom">
     <form class="ui">
-        <div>
+        <div >
             <h1>Create a chat room</h1>
             <input type="text" class="room-name"placeholder="room name" >
             <button type="button" class="chat-room-public">chat room public</button>
@@ -38,7 +38,7 @@
             
         </div>
     </form>
-
+    </div>
     <button id="showButton">Show it</button>
     <div id="chatPage" >
         <ul id="message-here">
