--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/creatroom.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/chat.css">
     <script src="/socket.io/socket.io.js"></script>
@@ -35,7 +36,7 @@
             <input type="text" class="room-name"placeholder="room name" >
             <button type="button" class="chat-room-public">chat room public</button>
             <button type="button" class="chat-room-private">chat room private</button>
-            <button type="button"  id="homes" class="home">home page</button>
+            <button type="button"  id="homes" class="home" >home page</button>
             
         </div>
     </form>
